# github-notifications-cleaner

./: Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: build_container.yml  mypy.yml  pylint.yml  pytest.yml
github_notifications_cleaner/: __init__.py  __main__.py  billing.py
tests/: test_billing.py  test_settings.py
