[tool.poetry]
name = "github-notifications-cleaner"
version = "0.2.2"
description = ""
authors = [
    "James Hogkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.scripts]
github-notifications-cleaner = "github_notifications_cleaner.__main__:cli"
github-billing-user = "github_notifications_cleaner.billing:cli"

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^2.4"
click = "^8.1.7"
loguru = "^0.7.2"
pydantic-settings = "^2.5.2"

[tool.poetry.dependencies.pydantic]
extras = [
    "dotenv",
]
version = "^2.9.2"

[tool.poetry.dev-dependencies]
mypy = "^1.11"
pytest = "^8.3.3"
black = "^24.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
types-click = "^7.1.8"

[tool.pylint.MASTER]
max-line-length = 200

[tool.ruff]
line-length = 200

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
