
[project]
authors = [{ name = "James Hogkinson", email = "james@terminaloutcomes.com" }]
license = { text = "MIT" }
requires-python = "<4.0,>=3.9"
dependencies = [
    "PyGithub<3.0,>=2.6",
    "click<9.0.0,>=8.1.8",
    "loguru<1.0.0,>=0.7.3",
    "pydantic-settings<3.0.0,>=2.8.1",
    "pydantic[dotenv]<3.0.0,>=2.11.3",
]
name = "github-notifications-cleaner"
version = "0.2.2"
description = ""

[project.scripts]
github-notifications-cleaner = "github_notifications_cleaner.__main__:cli"
github-billing-user = "github_notifications_cleaner.billing:cli"

[dependency-groups]
dev = ["ruff<1.0.0,>=0.11.5", "types-click<8.0.0,>=7.1.8"]


[tool.pylint.MASTER]
max-line-length = 200

[tool.ruff]
line-length = 200

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
