
[project]
authors = [{ name = "James Hogkinson", email = "james@terminaloutcomes.com" }]
license = { text = "MIT" }
requires-python = "<4.0,>=3.9"
dependencies = [
    "PyGithub<3.0,>=2.6",
    "click<9.0.0,>=8.1.8",
    "loguru<1.0.0,>=0.7.3",
    "pydantic>=2.11.3",
    "pydantic-settings<3.0.0,>=2.8.1",
]
name = "github-notifications-cleaner"
version = "0.3.0"
description = ""

[project.scripts]
github-notifications-cleaner = "github_notifications_cleaner.__main__:cli"
github-billing-user = "github_notifications_cleaner.billing:cli"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5,<1.0.0",
    "types-click<8.0.0,>=7.1.8",
]


[tool.pylint.MASTER]
max-line-length = 200

[tool.ruff]
line-length = 200

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
